tests/compile-fail/start-in-rhs.rs
extern crate pomelo;
use pomelo::*;

pomelo! {
    input ::= foo;
    foo ::=
        input;
     //~^ ERROR start symbol on the RHS of a rule
}

fn main() {}
